--- a/inicioSesion/style.css
+++ b/inicioSesion/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Alfa Slab One';
+    src: url(./AlfaSlabOne-Regular.ttf);
+}
+
 body{
     display: flex;
     justify-content: center;
@@ -11,18 +16,17 @@ body{
     display: block; 
     margin-left: auto; 
     margin-right: auto; 
-    width: 150px; 
+    width: 250px; 
     height: 150px; 
-  
-    margin-bottom: 20px; 
+    margin-bottom: 40px; 
 }
 h1{
     text-align: center;
-    font-size: 36px;
     color: white;
-    margin-bottom: 50px;
-    font-size: medium;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 60px;
+    font-size: large;
+    font-family: 'helvetica', sans-serif;
+   
 }
 
 
@@ -88,7 +92,7 @@ h1{
 }
 
 .sincuenta{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     display: block;
     text-align: center;
     color: white;
