--- a/ordenCompra/styleOrdenCompra.css
+++ b/ordenCompra/styleOrdenCompra.css
@@ -1,6 +1,11 @@
 /* General */
+@font-face {
+    font-family: 'Alfa Slab One';
+    src: url(../inicioSesion/AlfaSlabOne-Regular.ttf);
+}
+
 body {
-  font-family: 'Segoe UI', sans-serif;
+ /*  font-family: 'Segoe UI', sans-serif; */
   margin: 0;
   background: #fff;
   color: #555;
