--- a/modificacionDatos/style.css
+++ b/modificacionDatos/style.css
@@ -59,6 +59,24 @@ main {
     align-items: center;
 }
 
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 40px;
+    border-top: 1px solid #ddd;
+    background: #fff;
+  }
+  
+  footer .footer-info {
+    font-size: 14px;
+    color: #555;
+  }
+  
+  footer .footer-logo img {
+    height: 80px;
+  }
+
 h1{
     text-align: center;
     color: #000000;
@@ -150,7 +168,7 @@ h1{
   
   /* estilo de cada toast */
   .toast {
-    background-color: #5A6A5F;
+    background-color: #000000;
     color: #fff;
     padding: 12px 16px;
     border-radius: 8px;
@@ -208,6 +226,7 @@ h1{
     border-color: #4a90e2;
     box-shadow: 0 0 5px rgba(74, 144, 226, 0.5);
   }
+
 
   #perfil-usuario {
     position: relative;
