--- a/formularioRegistro/style.css
+++ b/formularioRegistro/style.css
@@ -25,7 +25,7 @@ main {
 }
 
 
-/* LOGIN CONTAINER */
+/* LOGIN / REGISTER CONTAINER */
 .login-container {
     width: 400px;
     padding: 30px;
@@ -51,7 +51,10 @@ h1 {
 
 /* INPUTS */
 #username,
-#password {
+#password,
+#fullname,
+#email,
+#confirm-password {
     width: 300px;
     border-radius: 45px;
     border: 1px solid #ccc;
@@ -66,7 +69,10 @@ h1 {
 }
 
 #username::placeholder,
-#password::placeholder {
+#password::placeholder,
+#fullname::placeholder,
+#email::placeholder,
+#confirm-password::placeholder {
     color: #525250;
     font-style: italic;
     opacity: 0.7;
@@ -89,7 +95,24 @@ h1 {
     background-color: #424242;
 }
 
-/* TEXTO DE REGISTRO */
+/* BOTÓN REGISTRO */
+#register-button {
+    width: 150px;
+    height: 40px;
+    border-radius: 45px;
+    border: none;
+    background-color: #000000;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 20px auto; 
+    display: block;
+}
+#register-button:hover {
+    background-color: #424242;
+}
+
+/* TEXTO DE REGISTRO / LOGIN */
 .sincuenta {
     color: white;
     font-size: 12px;
